# rpm-spec-tool

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.githooks/: README.md  pre-commit
.github/workflows/: ci.yml  release.yml
crates/analyzer/: Cargo.toml  README.md
crates/analyzer/examples/: lint_file.rs
crates/analyzer/src/: baseline.rs  bcond.rs  branch_aware.rs  branch_coverage.rs  classes.rs  config.rs  config_cache.rs  contract.rs  dep_walk.rs  diagnostic.rs  error_format.rs  impact.rs  lib.rs  lint.rs  macro_usage.rs  matrix.rs  policy.rs  portability.rs  registry.rs  session.rs  spec_locals.rs  spec_nevr.rs  visit.rs
crates/analyzer/src/files/: classifier.rs  mod.rs  walk.rs
crates/analyzer/src/rules/: adjacent_doc_lines.rs  adjacent_license_lines.rs  adjacent_mutex_ifs.rs  always_true_branch.rs  arch_complement_shorter.rs  arch_condition_domain_simplify.rs  arch_policy.rs  arch_subset_under_parent.rs  autoreqprov_comment.rs  bcond_modern.rs  bcond_negation_canonical.rs  bcond_on_non_fedora.rs  bcond_usage.rs  boolean_dnf.rs  branch_item_subset.rs  build_tool_brs.rs  buildarch_reparse.rs  buildsystem_macros.rs  canonical_major_section_order.rs  changelog_health.rs  combine_install_dirs.rs  commented_out_spec_code.rs  complementary_guards_same_item.rs  condition_common_disjunct_factor.rs  condition_common_factor.rs  conditional_factoring.rs  conditional_hoist.rs  conditional_idioms.rs  conditional_intervals.rs  conditional_merge.rs  conditional_optimize.rs  conditional_simplify.rs  conditional_structure.rs  context_redundant_part.rs  cp_chmod_to_install_m.rs  dead_elif.rs  dep_features.rs  dep_health.rs  dependency_constraint_subsumption.rs  deprecated_clean_section.rs  (+134 more)
crates/analyzer/src/rules/conditional_optimize/: absorption.rs  elif_collapse.rs  else_if_elif.rs  empty_else.rs  expr_constants.rs  idempotent_self.rs  invert_arch.rs  inverted_if_else.rs  line_continuation.rs  mod.rs  nested_and.rs  string_set.rs
crates/analyzer/src/rules/repo/: br_unresolvable.rs  br_version_unsatisfied.rs  file_conflict.rs  missing_br_for_command.rs  missing_br_for_file.rs  mod.rs  runtime_unresolvable.rs  shared.rs  test_fixtures.rs  upgrade_check.rs
crates/analyzer/src/rules/util/: cond.rs  dep_tag.rs  deps.rs  macros.rs  mod.rs  packages.rs  preamble.rs  test_profile.rs  text.rs
crates/analyzer/src/shell/: cmd_index.rs  mod.rs  tokens.rs  walk.rs
crates/analyzer/tests/: repo_lints_smoke.rs  rpm050_context.rs
crates/cli/: Cargo.toml
crates/cli/src/: app.rs  config.rs  fixer.rs  io.rs  main.rs
crates/cli/src/commands/: ast.rs  check.rs  completions.rs  config_loader.rs  format.rs  lint.rs  lints.rs  mod.rs  pretty.rs  printer_config.rs
crates/cli/src/commands/config/: doc.rs  init.rs  mod.rs  schema.rs  validate.rs
crates/cli/src/commands/matrix/: baseline.rs  buildroot.rs  buildroot_diff.rs  check.rs  classes.rs  coverage.rs  coverage_style.rs  deps.rs  deps_explain.rs  diff.rs  expand.rs  explain.rs  impact.rs  mod.rs  portability.rs  solver_glue.rs  universe.rs  upgrade_sim.rs  verify_contract.rs
crates/cli/src/commands/profile/: common.rs  fmt.rs  list.rs  macro_lookup.rs  macros.rs  mod.rs  show.rs  style.rs
crates/cli/src/commands/repo/: cache.rs  mod.rs  show.rs  status.rs  sync.rs  url.rs
crates/cli/src/output/: human.rs  json.rs  matrix.rs  mod.rs  pretty.rs  sarif.rs
crates/cli/tests/: cli.rs
crates/lsp/: Cargo.toml  README.md
crates/lsp/src/: code_actions.rs  completion.rs  diagnostics.rs  document.rs  encoding.rs  folding.rs  hover.rs  inlay.rs  lib.rs  main.rs  outline.rs  rename.rs  server.rs  xref.rs
crates/lsp/tests/: protocol.rs
crates/profile/: Cargo.toml  README.md
crates/profile/data/: altlinux-10-aarch64.showrc  altlinux-10-aarch64.toml  altlinux-10-e2k.showrc  altlinux-10-e2k.toml  altlinux-10-e2kv4.toml  altlinux-10-x86_64.showrc  altlinux-10-x86_64.toml  altlinux-11-aarch64.showrc  altlinux-11-aarch64.toml  altlinux-11-x86_64.showrc  altlinux-11-x86_64.toml  altlinux-spt-10-aarch64.showrc  altlinux-spt-10-aarch64.toml  altlinux-spt-10-e2k.showrc  altlinux-spt-10-e2k.toml  altlinux-spt-10-e2kv4.toml  altlinux-spt-10-x86_64.showrc  altlinux-spt-10-x86_64.toml  generic.toml  mosos-15-x86_64.showrc  mosos-15-x86_64.toml  redos-7.3-aarch64.showrc  redos-7.3-aarch64.toml  redos-7.3-x86_64.showrc  redos-7.3-x86_64.toml  redos-8-aarch64.showrc  redos-8-aarch64.toml  redos-8-x86_64.showrc  redos-8-x86_64.toml  rhel-10-aarch64.showrc  rhel-10-aarch64.toml  rhel-10-x86_64.showrc  rhel-10-x86_64.toml  rhel-8-aarch64.showrc  rhel-8-aarch64.toml  rhel-8-x86_64.showrc  rhel-8-x86_64.toml  rhel-9-aarch64.showrc  rhel-9-aarch64.toml  rhel-9-x86_64.showrc  (+5 more)
crates/profile/src/: autodetect.rs  builtin.rs  config_layer.rs  lib.rs  macro_lexer.rs  macro_variants.rs  merge.rs  overrides.rs  repos.rs  resolve.rs  showrc.rs  types.rs
crates/profile/tests/: builtin_profiles.rs  showrc_parse.rs
crates/profile/tests/fixtures/: rhel7-showrc.txt
crates/repo-core/: Cargo.toml
crates/repo-core/src/: error.rs  evr.rs  index.rs  lib.rs  package.rs
crates/repo-core/src/db/: convert.rs  mod.rs  schema.rs
crates/repo-metadata/: Cargo.toml
crates/repo-metadata/src/: aptrpm.rs  backend.rs  cache.rs  compression.rs  gpg.rs  http.rs  lib.rs  locks.rs  rpmmd.rs  util.rs
crates/repo-metadata/src/aptrpm/: contents.rs  error.rs  header.rs  mod.rs  package.rs  release.rs
crates/repo-metadata/src/rpmmd/: filelists.rs  primary.rs  repomd.rs  updateinfo.rs
crates/repo-metadata/tests/: aptrpm_fixture.rs  sync_smoke.rs
crates/repo-resolver/: Cargo.toml
crates/repo-resolver/src/: lib.rs  lookup.rs  predicates.rs  solver.rs  unsat.rs
crates/repo-resolver/tests/: solver_smoke.rs
doc/: README.md  ci-integration.md  cli.md  configuration.md  editor-integration.md  extended-lints-roadmap.md  extendend-lints.md  getting-started.md  lints-list.md  lints-todo.md  lints.md  matrix.md  profile-aware-lints.md  profiles.md  repos.md  workflow.md
tests/fixtures/: bad_clean_section.spec  bad_duplicate_build.spec  (+16 more)
(+4 files in other folders)
