[workspace]
resolver = "2"
members = [
    "crates/analyzer",
    "crates/cli",
    "crates/profile",
]

[workspace.package]
version      = "0.1.0"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
authors      = ["Evgenii Lepikhin <johnlepikhin@gmail.com>"]
repository   = "https://github.com/johnlepikhin/rpm-spec-tool"
publish      = ["crates-io"]

[workspace.dependencies]
rpm-spec         = { version = "0.3.4", features = ["parser", "printer", "serde"] }
rpm-spec-profile = { path = "crates/profile", version = "0.1.0" }
anyhow     = "1"
thiserror  = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
toml       = "0.8"
tracing    = "0.1"
time       = { version = "0.3", default-features = false, features = ["std"] }
