[workspace]
resolver = "2"
members = [
    "crates/analyzer",
    "crates/cli",
    "crates/lsp",
    "crates/profile",
    "crates/repo-core",
    "crates/repo-metadata",
    "crates/repo-resolver",
]

[workspace.package]
version      = "0.1.1"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
authors      = ["Evgenii Lepikhin <johnlepikhin@gmail.com>"]
repository   = "https://github.com/johnlepikhin/rpm-spec-tool"
publish      = ["crates-io"]

[workspace.dependencies]
rpm-spec               = { version = "0.3.4", features = ["parser", "printer", "serde"] }
rpm-spec-profile       = { path = "crates/profile", version = "0.1.1" }
rpm-spec-repo-core     = { path = "crates/repo-core", version = "0.1.1" }
rpm-spec-repo-metadata = { path = "crates/repo-metadata", version = "0.1.1" }
rpm-spec-repo-resolver = { path = "crates/repo-resolver", version = "0.1.1" }
anyhow     = "1"
thiserror  = "2"
serde      = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
schemars   = "1"
toml       = "0.8"
tracing    = "0.1"
time       = { version = "0.3", default-features = false, features = ["std"] }
rusqlite   = { version = "0.32", features = ["bundled"] }

# Pin rpm-spec at the local in-development checkout so workspace
# code can use API additions (e.g. `BuiltinMacro::With` /
# `parse_bcond_verbatim` from Phase 12) before the next rpm-spec
# release lands on crates.io. Drop this patch once the rpm-spec
# release containing those symbols is published.
[patch.crates-io]
rpm-spec = { path = "../rpm-spec" }
