[workspace]
resolver = "2"
members = [
    "crates/analyzer",
    "crates/cli",
    "crates/lsp",
    "crates/profile",
    "crates/repo-core",
    "crates/repo-metadata",
    "crates/repo-resolver",
]

[workspace.package]
version      = "0.1.3"
edition      = "2024"
rust-version = "1.88"
license      = "MIT OR Apache-2.0"
authors      = ["Evgenii Lepikhin <johnlepikhin@gmail.com>"]
repository   = "https://github.com/johnlepikhin/rpm-spec-tool"
publish      = ["crates-io"]

[workspace.dependencies]
rpm-spec               = { version = "0.4.1", features = ["parser", "printer", "serde"] }
rpm-spec-profile       = { path = "crates/profile", version = "0.1.3" }
rpm-spec-repo-core     = { path = "crates/repo-core", version = "0.1.3" }
rpm-spec-repo-metadata = { path = "crates/repo-metadata", version = "0.1.3" }
rpm-spec-repo-resolver = { path = "crates/repo-resolver", version = "0.1.3" }
anyhow     = "1"
thiserror  = "2"
serde      = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
schemars   = "1"
toml       = "0.8"
tracing    = "0.1"
time       = { version = "0.3", default-features = false, features = ["std"] }
rusqlite   = { version = "0.32", features = ["bundled"] }

# Lints elevated to `deny` at the workspace level so CI doesn't surface
# them as surprises. Members opt in via `[lints] workspace = true` in
# their own Cargo.toml — see crates/*/Cargo.toml. Newer clippy versions
# (≥ 1.95) make these `warn-by-default`, but we want them on for every
# toolchain we build with so the failure surface stays consistent.
[workspace.lints.clippy]
collapsible_if       = "deny"
collapsible_match    = "deny"
collapsible_else_if  = "deny"
unnecessary_sort_by  = "deny"
