[package]
name         = "rpm-spec-analyzer"
description  = "Visitor-based static analyzer library for RPM .spec files"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme        = "README.md"
homepage      = "https://github.com/johnlepikhin/rpm-spec-tool"
documentation = "https://docs.rs/rpm-spec-analyzer"
keywords      = ["rpm", "spec", "linter", "static-analysis", "linux"]
categories    = ["development-tools", "parser-implementations"]

[dependencies]
rpm-spec.workspace         = true
rpm-spec-profile.workspace = true
schemars.workspace   = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
toml.workspace       = true
tracing.workspace    = true
time.workspace       = true

[dev-dependencies]
tempfile = "3"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

