[package]
name         = "rpm-spec-analyzer"
description  = "Visitor-based static analyzer library for RPM .spec files"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme        = "README.md"
homepage      = "https://github.com/johnlepikhin/rpm-spec-tool"
documentation = "https://docs.rs/rpm-spec-analyzer"
keywords      = ["rpm", "spec", "linter", "static-analysis", "linux"]
categories    = ["development-tools", "parser-implementations"]

[dependencies]
rpm-spec.workspace             = true
rpm-spec-profile.workspace     = true
rpm-spec-repo-core.workspace   = true
rpm-spec-repo-resolver.workspace = true
schemars.workspace   = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
toml.workspace       = true
tracing.workspace    = true
time.workspace       = true
# Used by `config_cache::default_config_path` to resolve the XDG
# config dir (~/.config/rpm-spec-tool/rpmspec.toml). Version pinned
# to match `rpm-spec-repo-metadata`'s use so cargo doesn't pull two
# copies of `directories`.
directories = "5"

[dev-dependencies]
tempfile = "3"

[features]
# Exposes `crate::rules::repo::test_fixtures` (tiny RepoUniverse +
# `redos_profile()`) as a public module so analyzer integration tests
# can share fixtures with unit tests. Enabled automatically for the
# `repo_lints_smoke` integration test via `required-features`.
test-fixtures = []

[[test]]
name = "repo_lints_smoke"
required-features = ["test-fixtures"]

# Explicit empty feature list — must NOT use `all-features = true` because
# that would enable `test-fixtures`, exposing `rules::repo::test_fixtures`
# (an internal test-only module) as public API on docs.rs.
[package.metadata.docs.rs]
features = []
rustdoc-args = ["--cfg", "docsrs"]

