[package]
name         = "rpm-spec-lsp"
description  = "Language Server Protocol implementation for RPM .spec files"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
keywords    = ["rpm", "spec", "lsp", "language-server", "linter"]
categories  = ["development-tools", "command-line-utilities"]
readme      = "README.md"
publish     = false

[[bin]]
name = "rpm-spec-lsp"
path = "src/main.rs"

[dependencies]
rpm-spec-analyzer = { path = "../analyzer", version = "0.1.1" }
rpm-spec-profile.workspace = true
rpm-spec.workspace         = true

anyhow.workspace     = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

lsp-server = "0.7"
lsp-types  = "0.97"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"

[lints]
workspace = true
