[package]
name         = "rpm-spec-lsp"
description  = "Language Server Protocol implementation for RPM .spec files"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
keywords    = ["rpm", "spec", "lsp", "language-server", "linter"]
categories  = ["development-tools", "command-line-utilities"]
readme      = "README.md"
publish     = false

[[bin]]
name = "rpm-spec-lsp"
path = "src/main.rs"

[dependencies]
rpm-spec-analyzer = { path = "../analyzer", version = "0.1.3" }
rpm-spec-profile.workspace = true
rpm-spec.workspace         = true

anyhow.workspace     = true
serde.workspace      = true
serde_json.workspace = true
thiserror.workspace  = true
tracing.workspace    = true
tracing-subscriber   = { version = "0.3", features = ["env-filter"] }

lsp-server = "0.7"
lsp-types  = "0.97"
crossbeam-channel = "0.5"

[dev-dependencies]
tempfile = "3"

# ---------------------------------------------------------------------------
# Packaging metadata for cargo-deb and cargo-generate-rpm. The release
# workflow uses these to produce a separate .deb / .rpm for the LSP
# server so editor users can install it alongside (or without) the CLI.
# ---------------------------------------------------------------------------

[package.metadata.deb]
maintainer = "Evgenii Lepikhin <johnlepikhin@gmail.com>"
copyright = "2026, Evgenii Lepikhin <johnlepikhin@gmail.com>"
license-file = ["../../LICENSE-MIT", "0"]
extended-description = """
Language Server Protocol implementation for RPM .spec files. Provides
diagnostics, hover, and other editor-driven features by reusing the
analyzer and parser used by `rpm-spec-tool`. Configure your LSP-aware
editor to spawn `rpm-spec-lsp` on `*.spec` buffers."""
section = "devel"
priority = "optional"
assets = [
    ["target/release/rpm-spec-lsp",  "usr/bin/",                                 "755"],
    ["../../README.md",              "usr/share/doc/rpm-spec-lsp/README.md",     "644"],
    ["../../LICENSE-MIT",            "usr/share/doc/rpm-spec-lsp/LICENSE-MIT",   "644"],
    ["../../LICENSE-APACHE",         "usr/share/doc/rpm-spec-lsp/LICENSE-APACHE", "644"],
]

[package.metadata.generate-rpm]
license = "MIT OR Apache-2.0"
summary = "Language Server Protocol implementation for RPM .spec files"
assets = [
    { source = "target/release/rpm-spec-lsp", dest = "/usr/bin/rpm-spec-lsp",                          mode = "755" },
    { source = "../../README.md",             dest = "/usr/share/doc/rpm-spec-lsp/README.md",          mode = "644", doc = true },
    { source = "../../LICENSE-MIT",           dest = "/usr/share/doc/rpm-spec-lsp/LICENSE-MIT",        mode = "644", doc = true },
    { source = "../../LICENSE-APACHE",        dest = "/usr/share/doc/rpm-spec-lsp/LICENSE-APACHE",     mode = "644", doc = true },
]

[lints]
workspace = true
