[package]
name         = "rpm-spec-profile"
description  = "Distribution profiles for the RPM spec analyzer: identity, macros, rpmlib features, whitelists"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true

[lib]
name = "rpm_spec_profile"

[dependencies]
serde.workspace     = true
thiserror.workspace = true
toml.workspace      = true
tracing.workspace   = true
