[package]
name         = "rpm-spec-profile"
description  = "Distribution profiles for the RPM spec analyzer: identity, macros, rpmlib features, whitelists"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
authors.workspace      = true
repository.workspace   = true
readme        = "README.md"
homepage      = "https://github.com/johnlepikhin/rpm-spec-tool"
documentation = "https://docs.rs/rpm-spec-profile"
keywords      = ["rpm", "spec", "linux", "packaging", "macros"]
categories    = ["parser-implementations", "config"]

[lib]
name = "rpm_spec_profile"

[dependencies]
serde.workspace     = true
thiserror.workspace = true
toml.workspace      = true
tracing.workspace   = true
